# multi-agent-class-proj

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
experiments/: fast_and_slow_ants v2.yaml  fast_and_slow_ants.yaml  fast_and_slow_ants_v3.yaml  fast_and_slow_ants_v4.yaml  half_cheetahs.yaml  half_cheetahs_centralized.yaml  half_cheetahs_v2.yaml  half_cheetahs_v3.yaml
models/: eval_outliers.json
models/fast_and_slow_ants/: fast_ant_params.txt  slow_ant_params.txt
models/fast_and_slow_ants_v4/: fast_ant_1.0  fast_ant_1.0_params.txt  fast_ant_1.5  fast_ant_1.5_params.txt  slow_ant_0.5  slow_ant_0.5_params.txt
models/half_cheetahs/: cheetah_0_params.txt  cheetah_1_params.txt
models/merged_ant_init05/: ant-v5_seed0_agent0_params.txt  ant-v5_seed0_agent1_params.txt
scripts/: evaluate.sh  merge.sh  train.sh
src/nn_merge/: eval_cache.py  evaluate.py  inspect_model.py  merge.py  outliers.py  plot.py  reward_breakdown.py  run_experiments.py  train.py  utils.py
src/nn_merge/cadmm/: config.py  dinno.py  mnist_example.py  sac_dinno_test.py
src/nn_merge/envs/: __init__.py  rewards.py
src/nn_merge/merging/: __init__.py  strategies.py
wandb/: latest-run
wandb/run-20260414_175743-hlxb614s/: run-hlxb614s.wandb
wandb/run-20260414_175751-kooe12jm/: run-kooe12jm.wandb
wandb/run-20260414_180101-igqwodte/: run-igqwodte.wandb
wandb/run-20260414_180142-lh1m0sl5/: run-lh1m0sl5.wandb
wandb/run-20260414_180351-ytc897mw/: run-ytc897mw.wandb
wandb/run-20260414_180916-cqeplff6/files/: requirements.txt  wandb-metadata.json
