[project]
name = "nn-merging-experiments"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "stable-baselines3 >=2.3,<3",
    "gymnasium[mujoco] >=1.0,<2",
    "torch >=2.0",
    "numpy",
    "wandb",
    "moviepy",
    "pyyaml",
    "matplotlib",
    "scipy",
]

[project.optional-dependencies]
dev = ["ipython"]

[project.scripts]
nn-merge-train = "nn_merge.train:main"
nn-merge-merge = "nn_merge.merge:main"
nn-merge-eval = "nn_merge.evaluate:main"
nn-merge-inspect = "nn_merge.inspect_model:main"
nn-merge-run = "nn_merge.run_experiments:main"
nn-merge-plot = "nn_merge.plot:main"
[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/nn_merge"]


[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu124"]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
